--- a/templates/bundles/FOSUserBundle/ChangePassword/change_password.html.twig
+++ b/templates/bundles/FOSUserBundle/ChangePassword/change_password.html.twig
@@ -66,8 +66,8 @@
                             <hr>
                         </div>
                         <div class="text-center">
-                            <input type="submit" class="btn btn-primary" value="{{ 'profile_page.btn'|trans }}">&nbsp;&nbsp;
-                            <a href="/profile" class="btn btn-default">{{ 'profile_page.cancel'|trans }}</a>
+                            <input type="submit" class="btn btn-primary" value="{{ 'user_infos.btn.submit'|trans }}">&nbsp;&nbsp;
+                            <a href="/profile" class="btn btn-default">{{ 'user_infos.btn.cancel'|trans }}</a>
                         </div>
                         {{ form_end(form) }}
                     </div>
