--- a/templates/bundles/FOSUserBundle/Profile/edit.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/edit.html.twig
@@ -83,8 +83,8 @@
                         <p>{{ form_widget(form.current_password, {'attr': {'class': 'form-control'}}) }}</p>
                         <hr>
                         <div class="text-center">
-                            <input type="submit" class="btn btn-primary" value="{{ 'profile_page.btn'|trans }}">&nbsp;&nbsp;
-                            <a href="/profile" class="btn btn-default">{{ 'profile_page.cancel'|trans }}</a>
+                            <input type="submit" class="btn btn-primary" value="{{ 'user_infos.btn.submit'|trans }}">&nbsp;&nbsp;
+                            <a href="/profile" class="btn btn-default">{{ 'user_infos.btn.cancel'|trans }}</a>
                         </div>
                         {{ form_end(form) }}
                     </div>
