--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -152,7 +152,7 @@
                     <img src="{{ asset('images/user.png') }}" class="rounded-circle user-photo"
                          alt="User Profile Picture">
                     <div class="dropdown">
-                        {% set user_role = 'roles.' ~ app.user.roles[0] %}
+                        {% set user_role = 'user_infos.roles.' ~ app.user.roles[0] %}
                         {% set user_name = app.user.firstname ~ "  " ~ app.user.lastname %}
                         <span>{{ user_role|trans }} {{ 'sidebar.menu.welcome'|trans }}</span>
                         <a href="javascript:void(0);" class="dropdown-toggle user-name"
