--- a/templates/purchase/index.html.twig
+++ b/templates/purchase/index.html.twig
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedcolumns.bootstrap4.min.css') }}">
     <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedheader.bootstrap4.min.css') }}">
     <link rel="stylesheet" href="{{ asset('vendor/sweetalert/sweetalert.css') }}"/>
-    <link rel="stylesheet" href="{{ asset('css/popup_box.css') }}"/>
 {% endblock %}
 {% block sidebar %}
     {% set tab_menu_index, tab_menu_profile, tab_menu_histo, tab_menu_source, tab_admin_users, tab_admin_sellers, tab_admin_admins, tab_admin_products, nav_menu, nav_admin = "", "", "active", "", "", "", "", "", "active", "" %}
@@ -15,7 +14,7 @@
 {% endblock %}
 {% block main_content %}
     <div id="overlay"></div>
-    <div id="popupBox">
+    <div id="popupBox" class="animated flipInY">
         <div id="popupContent">
             <div class="header">
                 <p class="lead">{{ 'purchase_page.title'|trans }}</p>
@@ -39,12 +38,12 @@
                 <div class="form-group">
                     {{ form_widget(form.quantity, {'attr': {'class': 'form-control', 'id': 'signup-region'}}) }}
                 </div>
-                <input type="submit" class="btn btn-primary btn-lg btn-block" value="{{ 'registration_page.btn'|trans }}">
+                <hr>
+                <div class="text-center">
+                    <input type="submit" class="btn btn-primary" value="{{ 'registration_page.btn'|trans }}">
+                    <a href="javascript:void(0)" id="popupCancel"  class="btn btn-primary">{{ 'purchase_page.return'|trans }}</a>
+                </div>
                 {{ form_end(form) }}
-                <p></p>
-                <a href="javascript:void(0)" id="popupCancel"  class="btn btn-primary btn-lg btn-block">
-                    <i class="icon wb-plus" aria-hidden="false"></i>{{ 'purchase_page.return'|trans }}
-                </a>
             </div>
         </div>
     </div>
