--- a/templates/user/userList_edit.html.twig
+++ b/templates/user/userList_edit.html.twig
@@ -62,7 +62,7 @@
                         <p>{{ form_widget(form.lastname, {'attr': {'class': 'form-control'}}) }}</p>
                         <hr>
                         <small class="text-muted">{{ form_label(form.sex) }}</small>
-                        <p>{{ form_widget(form.sex) }}</p>
+                        <p>{{ form_widget(form.sex, {'attr': {'class': 'form-control'}}) }}</p>
                         <hr>
                         <small class="text-muted">{{ form_label(form.email) }}</small>
                         <p>{{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}</p>
@@ -82,12 +82,21 @@
                         <small class="text-muted">{{ form_label(form.region) }}</small>
                         <p>{{ form_widget(form.region, {'attr': {'class': 'form-control'}}) }}</p>
                         <hr>
+                        <small class="text-muted">{{ form_label(form.responsible_region) }}{% if page == "Users" %}<span class="text-danger"> (注意该用户为会员，不能添加负责地区)</span>{% endif %}</small>
+                        <p>
+                            {% if page == "Users" %}
+                            {{ form_widget(form.responsible_region, {'attr': {'class': 'form-control', 'disabled' : 'true'}}) }}
+                            {% else %}
+                            {{ form_widget(form.responsible_region, {'attr': {'class': 'form-control'}}) }}
+                            {% endif %}
+                        </p>
+                        <hr>
                         <small class="text-muted">{{ form_label(form.enabled) }}</small>
-                        <p>{{ form_widget(form.enabled) }}</p>
+                        <p>{{ form_widget(form.enabled, {'attr': {'class': 'form-control'}}) }}</p>
                         <hr>
                         <div class="text-center">
-                            <input type="submit" class="btn btn-primary" value="{{ 'profile_page.btn'|trans }}">&nbsp;&nbsp;
-                            <a href="/userList/{{ page|lower }}" class="btn btn-default">{{ 'profile_page.cancel'|trans }}</a>
+                            <input type="submit" class="btn btn-primary" value="{{ 'user_infos.btn.submit'|trans }}">&nbsp;&nbsp;
+                            <a href="/userList/{{ page|lower }}" class="btn btn-default">{{ 'user_infos.btn.cancel'|trans }}</a>
                         </div>
                         {{ form_end(form) }}
                     </div>
