--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -1,15 +1,29 @@
+{% trans_default_domain 'ums' %}
+{% extends 'layout.html.twig' %}
 
-    </script>
->>>>>>> develop
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/dataTables.bootstrap4.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedcolumns.bootstrap4.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedheader.bootstrap4.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('vendor/sweetalert/sweetalert.css') }}"/>
 {% endblock %}
+{% block sidebar %}
+    {% set tab_menu_index, tab_menu_profile, tab_menu_histo, tab_menu_source, tab_admin_users, tab_admin_sellers, tab_admin_admins, tab_admin_products, nav_menu, nav_admin = "", "", "", "", "", "", "", "active", "", "active" %}
+    {{ parent() }}
+{% endblock %}
+{% block main_content %}
+    <div id="main-content">
+        <div class="≠container-fluid">
+            <div class="col-lg-12">
                 <div class="card">
                     <div class="body">
-                        <button id="addToTable" class="btn btn-primary m-b-15" type="button">
-                            <i class="icon wb-plus" aria-hidden="true"></i>{{ 'product_page.add_row' | trans }}
-                        </button>
+                        <a href="/product/register"  class="btn btn-primary m-b-15">
+                            <i class="icon wb-plus" aria-hidden="false"></i>{{ 'product_page.add_row'|trans }}
+                        </a>
                         <div class="table-responsive">
-                            <table class="table table-bordered table-hover table-striped" cellspacing="0"
-                                   id="main-table">
+                            <table class="table table-bordered table-hover table-striped" cellspacing="0" id="main-table">
                                 <thead>
                                 <tr>
                                     <th>{{ 'product_page.product_id' | trans }}</th>
@@ -44,25 +58,17 @@
                                         <td>{{ p.ProductId }}</td>
                                         <td>{{ p.ProductName }}</td>
                                         <td>{{ p.Barcode }}</td>
-                                        <td>{{ p.ImagePath }}</td>
+                                        <td>
+                                            <img src="{{ asset('/upload-images/' ~ p.ImagePath)}}" height="42" width="42"/>
+                                        </td>
                                         <td>{{ p.Category }}</td>
                                         <td>{{ p.ShelfLife }}</td>
                                         <td>{{ p.Promotion }}</td>
                                         <td>{{ p.Stock }}</td>
                                         <td>{{ p.Description }}</td>
                                         <td class="actions">
-                                            <button class="btn btn-sm btn-icon btn-pure btn-default on-editing m-r-5 button-save"
-                                                    data-toggle="tooltip" data-original-title="Save" hidden><i
-                                                        class="icon-drawer" aria-hidden="true"></i></a>
-                                                <button class="btn btn-sm btn-icon btn-pure btn-default on-editing button-discard"
-                                                        data-toggle="tooltip" data-original-title="Discard" hidden><i
-                                                            class="icon-close" aria-hidden="true"></i></a>
-                                                    <button class="btn btn-sm btn-icon btn-pure btn-default on-default m-r-5 button-edit"
-                                                            data-toggle="tooltip" data-original-title="Edit"><i
-                                                                class="icon-pencil" aria-hidden="true"></i></a>
-                                                        <button class="btn btn-sm btn-icon btn-pure btn-default on-default button-remove"
-                                                                data-toggle="tooltip" data-original-title="Remove"><i
-                                                                    class="icon-trash" aria-hidden="true"></i></a>
+                                            <a href="/product/delete/{{ p.ProductId }}&product" class="btn btn-danger delete_product_confirm" title="Delete">
+                                                <i class="fa fa-trash-o"></i></a>
                                         </td>
                                     </tr>
                                 {% endfor %}
@@ -71,6 +77,42 @@
                             </button>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('bundles_js/datatablescripts.bundle.js') }}"></script>
+    <script src="{{ asset('vendor/jquery-datatable/buttons/dataTables.buttons.min.js') }}"></script>
+    <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.bootstrap4.min.js') }}"></script>
+    <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.colVis.min.js') }}"></script>
+    <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.html5.min.js') }}"></script>
+    <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.print.min.js') }}"></script>
+    <script src="{{ asset('vendor/sweetalert/sweetalert.min.js') }}"></script>
+    <script src="{{ asset('js/pages/tables/jquery-datatable.js') }}"></script>
+    <script>
+        $(document).ready(function () {
+            $('.delete_product_confirm').click(function (e) {
+                e.preventDefault();
+                var linkURL = $(this).attr("href");
+                confirmBeforeRedirect(linkURL);
+            });
+
+            function confirmBeforeRedirect(linkURL) {
+                swal({
+                    title: "确定删除该产品吗？",
+                    text: "该操作无法恢复！",
+                    type: "warning",
+                    showCancelButton: true,
+                    confirmButtonColor: "#dc3545",
+                    confirmButtonText: "确定删除",
+                    cancelButtonText: "取消"
+                }, function () {
+                    window.location.href = linkURL;
+                });
+            };
+        })
     </script>
->>>>>>> develop
 {% endblock %}
