Hide skin changer

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -174,9 +174,9 @@
                         <li class="nav-item"><a class="nav-link {{ nav_admin }}" data-toggle="tab"
                                                 href="#admin_menu">{{ 'sidebar.menu.admin'|trans }}</a></li>
                     {% endif %}
-                    <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#setting"><i
+                    {#<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#setting"><i
                                     class="icon-settings"></i></a>
-                    </li>
+                    </li>#}
                 </ul>
 
                 <!-- Tab panes -->
@@ -230,7 +230,7 @@
                             </nav>
                         </div>
                     {% endif %}
-                    <div class="tab-pane animated fadeIn" id="setting">
+                    {#<div class="tab-pane animated fadeIn" id="setting">
                         <div class="p-l-15 p-r-15">
                             <h6>{{ 'sidebar.setting.skins'|trans }}</h6>
                             <ul class="choose-skin list-unstyled">
@@ -260,7 +260,7 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>
+                    </div>#}
                 </div>
             </div>
         </div>
