--- a/templates/purchase/index.html.twig
+++ b/templates/purchase/index.html.twig
@@ -41,7 +41,7 @@
                 <hr>
                 <div class="text-center">
                     <input type="submit" class="btn btn-primary" value="{{ 'registration_page.btn'|trans }}">
-                    <a href="javascript:void(0)" id="popupCancel"  class="btn btn-primary">{{ 'purchase_page.return'|trans }}</a>
+                    <a href="javascript:void(0)" id="popupCancel"  class="btn btn-default">{{ 'purchase_page.return'|trans }}</a>
                 </div>
                 {{ form_end(form) }}
             </div>
