Add table for stock users infos

--- a/templates/user/userList_sellers.html.twig
+++ b/templates/user/userList_sellers.html.twig
@@ -52,7 +52,7 @@
                 <hr>
                 <small class="text-muted">{{ form_label(form.phone) }} *</small>
                 <p>{{ form_widget(form.phone, {'attr': {'class': 'form-control'}}) }}</p>
-                <div class="form-control-errors">{{ form_errors(form.phone) }}</div>
+                <div class="form-control-errors" id="error_phone">{{ form_errors(form.phone) }}</div>
                 <hr>
                 <small class="text-muted">{{ form_label(form.wechat) }}</small>
                 <p>{{ form_widget(form.wechat, {'attr': {'class': 'form-control'}}) }}</p>
@@ -281,6 +281,14 @@
                 swal({
                     title: "出错啦",
                     text: "该邮箱已被注册！",
+                    type: "error"
+                });
+                $('.sweet-alert p').attr('style', 'display:block;color:#de4848');
+            }
+            if ( $('#error_phone').html().length > 0 ) {
+                swal({
+                    title: "出错啦",
+                    text: "该手机号已被注册！",
                     type: "error"
                 });
                 $('.sweet-alert p').attr('style', 'display:block;color:#de4848');
