--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -39,8 +39,9 @@
                             <div class="form-group">
                                 {{ form_widget(form.id_card, {'attr': {'class': 'form-control', 'id': 'signup-id_card'}}) }}
                             </div>
-                            <div class="form-group">
+                            <div class="form-group form-control-errors">
                                 {{ form_widget(form.phone, {'attr': {'class': 'form-control', 'id': 'signup-phone'}}) }}
+                                {{ form_errors(form.phone) }}
                             </div>
                             <div class="form-group">
                                 {{ form_widget(form.wechat, {'attr': {'class': 'form-control', 'id': 'signup-wechat'}}) }}
