--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -8,22 +8,108 @@
     <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedcolumns.bootstrap4.min.css') }}">
     <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedheader.bootstrap4.min.css') }}">
     <link rel="stylesheet" href="{{ asset('vendor/sweetalert/sweetalert.css') }}"/>
+    <link rel="stylesheet" href="{{ asset('css/popup_box.css') }}"/>
 {% endblock %}
 {% block sidebar %}
     {% set tab_menu_index, tab_menu_profile, tab_menu_histo, tab_menu_source, tab_admin_users, tab_admin_sellers, tab_admin_admins, tab_admin_products, nav_menu, nav_admin = "", "", "", "", "", "", "", "active", "", "active" %}
     {{ parent() }}
 {% endblock %}
 {% block main_content %}
-    <div id="main-content">
-        <div class="≠container-fluid">
-            <div class="col-lg-12">
-                <div class="card">
-                    <div class="body">
-                        <a href="/product/register"  class="btn btn-primary m-b-15">
+<div id="overlay"></div>
+    <div id="popupBox">
+        <div id="popupContent">
+            <div class="header">
+                <p class="lead">{{ 'product_page.title'|trans }}</p>
+            </div>
+            <div class="body">
+                {{ form_start(form, {'attr': {'class': 'form-auth-small'}}) }}
+                <div class="form-group">
+                    {{ form_widget(form.product_name, {'attr': {'class': 'form-control', 'id': 'signup-phone'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_widget(form.barcode, {'attr': {'class': 'form-control', 'id': 'signup-firstname'}}) }}
+                    {{ form_errors(form.barcode) }}
+                </div>
+                <div class="form-group">
+                    {{ form_widget(form.image_path, {'attr': {'class': 'form-control', 'id': 'signup-firstname'}}) }}
+                    {{ form_errors(form.image_path) }}
+                </div>
+                <div class="form-group">
+                    {{ form_widget(form.category, {'attr': {'class': 'form-control', 'id': 'signup-firstname'}}) }}
+                    {{ form_errors(form.category) }}
+                </div>
+                <div class="form-group">
+                    {{ form_widget(form.shelf_life, {'attr': {'class': 'form-control', 'id': 'signup-firstname'}}) }}
+                    {{ form_errors(form.shelf_life) }}
+                </div>
+                <div class="form-group">
+                    {{ form_widget(form.promotion, {'attr': {'class': 'form-control', 'id': 'signup-firstname'}}) }}
+                    {{ form_errors(form.promotion) }}
+                </div>
+                <div class="form-group">
+                    {{ form_widget(form.stock, {'attr': {'class': 'form-control', 'id': 'signup-firstname'}}) }}
+                    {{ form_errors(form.stock) }}
+                </div>
+                <div class="form-group">
+                    {{ form_widget(form.description, {'attr': {'class': 'form-control', 'id': 'signup-firstname'}}) }}
+                    {{ form_errors(form.description) }}
+                </div>
+                <input type="submit" class="btn btn-primary btn-lg btn-block" value="{{ 'product_page.btn'|trans }}">
+                {{ form_end(form) }}
+                <p></p>
+                <a href="/product"  class="btn btn-primary btn-lg btn-block">
+                    <i class="icon wb-plus" aria-hidden="false"></i>{{ 'product_page.return'|trans }}
+                </a>
+            </div>
+        </div>
+    </div>
+    <div id="main-content" class="profilepage_2">
+        <div class="container-fluid">
+            <div class="block-header">
+                <div class="row">
+                    <div class="col-lg-6 col-md-8 col-sm-12">
+                        <h2><a href="javascript:void(0);" class="btn btn-xs btn-link btn-toggle-fullwidth"><i
+                                        class="fa fa-arrow-left"></i></a>{{ 'product_page.page_title'|trans }}</h2>
+                        <ul class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="/"><i class="icon-home"></i></a></li>
+                            <li class="breadcrumb-item active">{{ 'product_page.page_title'|trans }}</li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-6 col-md-4 col-sm-12 text-right">
+                        <div class="bh_chart hidden-xs">
+                            <div class="float-left m-r-15">
+                                <small>Visitors</small>
+                                <h6 class="mb-0 mt-1"><i class="icon-user"></i> 1,784</h6>
+                            </div>
+                            <span class="bh_visitors float-right">2,5,1,8,3,6,7,5</span>
+                        </div>
+                        <div class="bh_chart hidden-sm">
+                            <div class="float-left m-r-15">
+                                <small>Visits</small>
+                                <h6 class="mb-0 mt-1"><i class="icon-globe"></i> 325</h6>
+                            </div>
+                            <span class="bh_visits float-right">10,8,9,3,5,8,5</span>
+                        </div>
+                        <div class="bh_chart hidden-sm">
+                            <div class="float-left m-r-15">
+                                <small>Chats</small>
+                                <h6 class="mb-0 mt-1"><i class="icon-bubbles"></i> 13</h6>
+                            </div>
+                            <span class="bh_chats float-right">1,8,5,6,2,4,3,2</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row clearfix">
+                <div class="col-lg-12">
+                    <div class="card">
+                        <div class="body">
+                        <a href="javascript:void(0)" id="addRow" class="btn btn-primary m-b-15">
                             <i class="icon wb-plus" aria-hidden="false"></i>{{ 'product_page.add_row'|trans }}
                         </a>
-                        <div class="table-responsive">
-                            <table class="table table-bordered table-hover table-striped" cellspacing="0" id="main-table">
+                            <div class="table-responsive">
+                                <table class="table table-bordered table-striped table-hover js-basic-example dataTable table-custom table-userList text-center">
                                 <thead>
                                 <tr>
                                     <th>{{ 'product_page.product_id' | trans }}</th>
@@ -67,6 +153,8 @@
                                         <td>{{ p.Stock }}</td>
                                         <td>{{ p.Description }}</td>
                                         <td class="actions">
+                                            <a href="/product/edit/{{ p.ProductId }}&product" class="btn btn-info" title="edit">
+                                                <i class="fa fa-edit"></i></a>
                                             <a href="/product/delete/{{ p.ProductId }}&product" class="btn btn-danger delete_product_confirm" title="Delete">
                                                 <i class="fa fa-trash-o"></i></a>
                                         </td>
@@ -92,6 +180,7 @@
     <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.print.min.js') }}"></script>
     <script src="{{ asset('vendor/sweetalert/sweetalert.min.js') }}"></script>
     <script src="{{ asset('js/pages/tables/jquery-datatable.js') }}"></script>
+
     <script>
         $(document).ready(function () {
             $('.delete_product_confirm').click(function (e) {
@@ -114,5 +203,20 @@
                 });
             };
         })
+    </script>
+
+    <script>
+        $('#addRow').click(function () {
+            $('#overlay').fadeIn('fast');
+            $('#popupBox').fadeIn('fast');
+            $('#popupContent').fadeIn('fast');
+        });
+
+        $('#overlay, #popupCancel').click(function () {
+            $('#overlay').fadeOut('fast');
+            $('#popupBox').fadeOut('fast');
+            $('#popupContent').fadeOut('fast');
+        });
+
     </script>
 {% endblock %}
