--- a/templates/user/userList_admins.html.twig
+++ b/templates/user/userList_admins.html.twig
@@ -128,7 +128,7 @@
                         <div class="body">
                             <a href="javascript:void(0)" id="addRow" class="btn btn-primary m-b-15 text-white">{{ 'userList_pages.add_admin'|trans }}</a>
                             <div class="table-responsive">
-                                <table class="table table-bordered table-striped table-hover js-basic-example dataTable table-custom table-userList text-center">
+                                <table class="table table-bordered table-striped table-hover js-basic dataTable table-custom table-userList text-center">
                                     <thead>
                                     <tr>
                                         <th class="text-left">{{ 'user_infos.name'|trans }}</th>
