--- a/templates/user/userList_users.html.twig
+++ b/templates/user/userList_users.html.twig
@@ -60,7 +60,7 @@
                     <div class="card">
                         <div class="body">
                             <div class="table-responsive">
-                                <table class="table table-bordered table-striped table-hover js-basic-example dataTable table-custom table-userList text-center">
+                                <table class="table table-bordered table-striped table-hover js-basic dataTable table-custom table-userList text-center">
                                     <thead>
                                     <tr>
                                         <th class="text-left">{{ 'user_infos.name'|trans }}</th>
