Edit upload file directory
Edit upload file directory

--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -145,7 +145,7 @@
                                         <td>{{ p.ProductName }}</td>
                                         <td>{{ p.Barcode }}</td>
                                         <td>
-                                            <img src="{{ asset('/upload-images/' ~ p.ImagePath)}}" height="42" width="42"/>
+                                            <img src="{{ asset('/uploads/images/products/' ~ p.ImagePath)}}" height="42" width="42"/>
                                         </td>
                                         <td>{{ p.Category }}</td>
                                         <td>{{ p.ShelfLife }}</td>
